--- a/about-us.html
+++ b/about-us.html
@@ -12,9 +12,9 @@
     />
     <meta
       property="og:image"
-      content="https://www.sandrockmineralholdings.com/static/logo.png"
+      content="https://www.lubumbashigold.com/static/logo.png"
     />
-    <meta property="og:url" content="https://www.sandrockmineralholdings.com" />
+    <meta property="og:url" content="https://www.lubumbashigold.com" />
 
     <title>LUBUMBASHI GOLD SMELTING AND PROCESSING</title>
 
@@ -82,7 +82,7 @@
             <div class="nav-outer">
               <nav class="nav main-menu">
                 <ul class="navigation">
-                  <li class=""><a href="/">Home</a></li>
+                  <li class=""><a href="index.html">Home</a></li>
                   <li class=""><a href="services.html">Services</a></li>
                   <li class="current"><a href="about-us.html">About</a></li>
                   <li><a href="contact-us.html">Contact</a></li>
@@ -184,15 +184,15 @@
 
       <section
         class="page-title"
-        style="background-image: url(images/background/page-title-bg.png)"
+        style="background-image: url(images/banner/banner.jpg)"
       >
         <div class="auto-container">
           <div
             class="title-outer d-sm-flex align-items-center justify-content-sm-between"
           >
-            <h1 class="title">About Us</h1>
-            <ul class="page-breadcrumb">
-              <li><a href="/">Home</a></li>
+            <h1 class="title" style="color: aliceblue">About Us</h1>
+            <ul class="page-breadcrumb" style="color: aliceblue">
+              <li><a href="index.html">Home</a></li>
               <li>About Us</li>
             </ul>
           </div>
@@ -331,7 +331,7 @@
                   <div class="info-box col-lg-6 col-md-6 col-sm-6">
                     <div class="inner-box">
                       <i class="icon flaticon-diamond-2"></i>
-                      <h6 class="title">Precious Metal Dealers</h6>
+                      <h6 class="title">Mineral refining Dealers</h6>
                     </div>
                   </div>
                   <div class="info-box col-lg-6 col-md-6 col-sm-6">
@@ -364,7 +364,7 @@
                 <div class="image-box">
                   <figure class="image overlay-anim">
                     <img
-                      src="images/resource/services1-1.jpg"
+                      src="images/resource/Mine-quarry.jpg"
                       style="height: 18em; width: 34em; object-fit: cover"
                       alt
                     />
