--- a/page-404.html
+++ b/page-404.html
@@ -13,9 +13,9 @@
     />
     <meta
       property="og:image"
-      content="https://www.sandrockmineralholdings.com/static/logo.png"
+      content="https://www.lubumbashigold.com/static/logo.png"
     />
-    <meta property="og:url" content="https://www.sandrockmineralholdings.com" />
+    <meta property="og:url" content="https://www.lubumbashigold.com" />
 
     <title>LUBUMBASHI GOLD SMELTING AND PROCESSING</title>
 
