--- a/services.html
+++ b/services.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-  <!-- Mirrored from html.kodesolution.com/2023/archisky-html/services.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 25 Apr 2024 21:07:48 GMT -->
   <head>
     <meta charset="utf-8" />
     <meta
@@ -13,9 +12,9 @@
     />
     <meta
       property="og:image"
-      content="https://www.sandrockmineralholdings.com/static/logo.png"
+      content="https://www.lubumbashigold.com/static/logo.png"
     />
-    <meta property="og:url" content="https://www.sandrockmineralholdings.com" />
+    <meta property="og:url" content="https://www.lubumbashigold.com" />
 
     <title>LUBUMBASHI GOLD SMELTING AND PROCESSING</title>
 
@@ -53,6 +52,7 @@
       referrerpolicy="no-referrer"
     />
   </head>
+
   <body>
     <div class="page-wrapper">
       <div class="sandrock-preloader">
@@ -95,7 +95,7 @@
             <div class="nav-outer">
               <nav class="nav main-menu">
                 <ul class="navigation">
-                  <li class=""><a href="/">Home</a></li>
+                  <li class=""><a href="index.html">Home</a></li>
                   <li class="current"><a href="services.html">Services</a></li>
                   <li><a href="about-us.html">About</a></li>
                   <li><a href="contact-us.html">Contact</a></li>
@@ -198,15 +198,15 @@
 
       <section
         class="page-title"
-        style="background-image: url(images/background/page-title-bg.png)"
+        style="background-image: url(images/banner/banner.jpg)"
       >
         <div class="auto-container">
           <div
             class="title-outer d-sm-flex align-items-center justify-content-sm-between"
           >
-            <h1 class="title">Services</h1>
-            <ul class="page-breadcrumb">
-              <li><a href="/">Home</a></li>
+            <h1 class="title" style="color: aliceblue">Services</h1>
+            <ul class="page-breadcrumb" style="color: aliceblue">
+              <li><a href="index.html">Home</a></li>
               <li>Services</li>
             </ul>
           </div>
@@ -222,7 +222,7 @@
               <div class="inner-box">
                 <figure class="image">
                   <img
-                    src="images/resource/services1-1.jpg"
+                    src="images/resource/highpuritygold.jpg"
                     style="height: 15em; object-fit: cover"
                     alt
                   />
@@ -230,15 +230,17 @@
                 <div class="content-box">
                   <div class="title-box">
                     <h4 class="title">
-                      <a href="services.html">Mineral Logistics</a>
+                      <a href="services.html"
+                        >High-Purity Gold Electrolytic Refining</a
+                      >
                     </h4>
                     <i class="icon fa-solid fa-earth-africa"></i>
                   </div>
                   <div class="text">
-                    We provide efficient transportation services for the
-                    movement of minerals from mining sites to processing
-                    facilities or distribution centers, ensuring timely delivery
-                    and cost-effectiveness.
+                    Our Wohlwill electrolytic refining process produces the
+                    purest gold for financial markets and high-tech
+                    applications. The Process includes and undergoes
+                    electrolysis using pure gold cathodes.
                   </div>
                   <div class="btn-box"></div>
                 </div>
@@ -252,7 +254,7 @@
               <div class="inner-box">
                 <figure class="image">
                   <img
-                    src="images/resource/minerals1-1.jpg"
+                    src="images/resource/gold-silver.jpg"
                     style="height: 15em; object-fit: cover"
                     alt
                   />
@@ -260,15 +262,17 @@
                 <div class="content-box">
                   <div class="title-box">
                     <h4 class="title">
-                      <a href="services.html">Warehousing and Storage</a>
+                      <a href="services.html">
+                        Gold-Silver Separation and Refining</a
+                      >
                     </h4>
                     <i class="icon fa-solid fa-warehouse"></i>
                   </div>
                   <div class="text">
-                    Our secure and strategically located warehouses offer
-                    storage solutions for raw minerals and refined products,
-                    maintaining inventory integrity and accessibility for our
-                    clients.
+                    We do specialized processing for gold-silver doré (typical
+                    60-80% gold content) with complete metal recovery of initial
+                    melting and sampling and Silver separation via nitric acid
+                    digestion.
                   </div>
                   <div class="btn-box"></div>
                 </div>
@@ -282,7 +286,7 @@
               <div class="inner-box">
                 <figure class="image">
                   <img
-                    src="images/resource/services1-7.jpg"
+                    src="images/resource/smallscaleminer.jpg"
                     style="height: 15em; object-fit: cover"
                     alt
                   />
@@ -290,15 +294,17 @@
                 <div class="content-box">
                   <div class="title-box">
                     <h4 class="title">
-                      <a href="services.html">Customs Clearance</a>
+                      <a href="services.html"
+                        >Small-Scale Miner Support Package</a
+                      >
                     </h4>
                     <i class="icon fa-solid fa-circle-check"></i>
                   </div>
                   <div class="text">
-                    We handle all aspects of customs clearance and
-                    documentation, streamlining the import and export process
-                    for our clients and ensuring compliance with international
-                    regulations.
+                    Complete processing solution for artisanal and small-scale
+                    miners that include On-site collection and secure transport,
+                    Initial evaluation and material sorting and customized
+                    processing based on ore type.
                   </div>
                   <div class="btn-box"></div>
                 </div>
@@ -311,7 +317,7 @@
               <div class="inner-box">
                 <figure class="image">
                   <img
-                    src="images/resource/services1-4.jpg"
+                    src="images/resource/preciousmetal.jpg"
                     style="height: 15em; object-fit: cover"
                     alt
                   />
@@ -341,7 +347,7 @@
               <div class="inner-box">
                 <figure class="image">
                   <img
-                    src="images/resource/services1-8.jpg"
+                    src="images/resource/advisorysupport.jpg"
                     style="height: 15em; object-fit: cover"
                     alt
                   />
@@ -354,9 +360,11 @@
                     <i class="icon fa-solid fa-user-pen"></i>
                   </div>
                   <div class="text">
-                    It is a long established fact that a reader jki will be
-                    distracted by the readable contentjli of a page when looking
-                    at its layout.
+                    We provide specialized consulting and advisory services for
+                    gold refining, smelting, and precious metals processing.Our
+                    team of metallurgists, engineers, and industry experts helps
+                    mining companies, refiners and investors optimize
+                    operations.
                   </div>
                   <div class="btn-box"></div>
                 </div>
