--- a/contact-us.html
+++ b/contact-us.html
@@ -12,9 +12,9 @@
     />
     <meta
       property="og:image"
-      content="https://www.sandrockmineralholdings.com/static/logo.png"
+      content="https://www.lubumbashigold.com/static/logo.png"
     />
-    <meta property="og:url" content="https://www.sandrockmineralholdings.com" />
+    <meta property="og:url" content="https://www.lubumbashigold.com" />
 
     <title>LUBUMBASHI GOLD SMELTING AND PROCESSING</title>
 
@@ -40,6 +40,7 @@
     ><![endif]-->
     <!--[if lt IE 9]><script src="js/respond.js"></script><![endif]-->
   </head>
+
   <body>
     <div class="page-wrapper">
       <div class="sandrock-preloader">
@@ -82,7 +83,7 @@
             <div class="nav-outer">
               <nav class="nav main-menu">
                 <ul class="navigation">
-                  <li class=""><a href="/">Home</a></li>
+                  <li class=""><a href="index.html">Home</a></li>
                   <li class=""><a href="services.html">Services</a></li>
                   <li><a href="about-us.html">About</a></li>
                   <li class="current"><a href="contact-us.html">Contact</a></li>
@@ -185,15 +186,15 @@
 
       <section
         class="page-title"
-        style="background-image: url(images/background/page-title-bg.png)"
+        style="background-image: url(images/banner/banner.jpg)"
       >
         <div class="auto-container">
           <div
             class="title-outer d-sm-flex align-items-center justify-content-sm-between"
           >
-            <h1 class="title">Contact Us</h1>
-            <ul class="page-breadcrumb">
-              <li><a href="/">Home</a></li>
+            <h1 class="title" style="color: aliceblue">Contact Us</h1>
+            <ul class="page-breadcrumb" style="color: aliceblue">
+              <li><a href="index.html">Home</a></li>
               <li>Contact</li>
             </ul>
           </div>
@@ -344,9 +345,8 @@
 
       <section class="map-section">
         <iframe
-          class="map w-100"
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d138439.00316153094!2d32.57059212031255!3d0.30697967410918303!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x177dbc0f9d74b39b%3A0x4538903dd96b6fec!2sKampala!5e0!3m2!1sen!2sug!4v1714165782883!5m2!1sen!2sug"
-          width="600"
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d125032.61158473245!2d27.419789479112985!3d-11.67533035693348!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x19723ea34874cbd9%3A0xa1c6f5a74f805b2f!2sLubumbashi%2C%20Democratic%20Republic%20of%20the%20Congo!5e0!3m2!1sen!2sug!4v1744366588457!5m2!1sen!2sug"
+          width="1500"
           height="450"
           style="border: 0"
           allowfullscreen=""
