--- a/contact-us.html
+++ b/contact-us.html
@@ -313,8 +313,8 @@
                     </div>
                     <div class="text">
                       <h6>Have any question?</h6>
-                      <a href="tel:980089850"
-                        ><span>Free</span> +256 (020)-9850</a
+                      <a href="mailto:info@lubumbashiminerals.com"
+                        ><span>Free</span> info@lubumbashiminerals.com</a
                       >
                     </div>
                   </li>
