--- a/index.html
+++ b/index.html
@@ -163,9 +163,9 @@
                                         class="btn-title">Learn More</span></a>
 
                                 <a href="tel:+92(8800)9806" class="info-btn wow fadeInRight" data-wow-delay="1400ms">
-                                    <i class="icon fa-brands fa-whatsapp"></i>
+                                    <i class="icon fa-brands fa-mail"></i>
                                     <small class="light-text">Contact Us:</small>
-                                    <strong class="text-white">+(256) 78 555-0129</strong>
+                                    <strong class="text-white">info@lubumbashiminerals.com</strong>
                                 </a>
                             </div>
                         </div>
