--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                                         class="btn-title">Learn More</span></a>
 
                                 <a href="tel:+92(8800)9806" class="info-btn wow fadeInRight" data-wow-delay="1400ms">
-                                    <i class="icon fa-brands fa-mail"></i>
+                                    <i class="icon fa-brands fa-envelope"></i>
                                     <small class="light-text">Contact Us:</small>
                                     <strong class="text-white">info@lubumbashiminerals.com</strong>
                                 </a>
@@ -225,11 +225,7 @@
                                 </div>
                             </div>
                             <div class="bottom-box">
-                                <a href="tel:+92(8800)9806" class="info-btn wow fadeInUp">
-                                    <i class="icon fa fa-phone"></i>
-                                    <small class="text">Contact Us:</small>
-                                    <strong>+(256) 78 555-0129</strong>
-                                </a>
+                                
 
                                 <div class="author-box">
                                     <div class="inner-box wow fadeInLeft">
