--- a/404.html
+++ b/404.html
@@ -155,7 +155,7 @@
                             <h1 class="title text-white wow fadeInUp" data-wow-delay="600ms">Unveiling Africa's
                                 Treasures</h1>
                             <div class="text wow fadeInUp" data-wow-delay="900ms">Embark on a Journey of Riches with
-                                Sandrock: Where Gold Meets Legacy. Explore our World of Precious Minerals, Crafted by
+                                Lubumbashi Gold Smelting and Processing Company: Where Gold Meets Legacy. Explore our World of Precious Minerals, Crafted by
                                 Nature's Finest Hands. Join Us in Unearthing Wealth, One Glittering Nugget at a Time!
                             </div>
                             <div class="btn-box wow fadeInUp" data-wow-delay="1200ms">
