--- a/404.html
+++ b/404.html
@@ -90,8 +90,8 @@
                         <li>
                             <i class="icon lnr-icon-envelope1"></i>
                             <span class="title">Send Email</span>
-                            <div class="text"><a href="mailto:info@lubumbashiminerals.com"><span
-                                        class="__cf_email__">info@lubumbashiminerals.com</span></a></div>
+                            <div class="text"><a href="mailto:info@lubumbashigold.com"><span
+                                        class="__cf_email__">info@lubumbashigold.com</span></a></div>
                         </li>
                         <li>
                             <i class="icon lnr-icon-map-marker"></i>
@@ -233,10 +233,10 @@
 
                                 <div class="author-box">
                                     <div class="inner-box wow fadeInLeft">
-                                        <a href="mailto:info@lubumbashiminerals.com" class="info-btn wow fadeInUp">
+                                        <a href="mailto:info@lubumbashigold.com" class="info-btn wow fadeInUp">
                                             <i class="icon fa fa-envelope"></i>
                                             <small class="text">Email us:</small>
-                                            <strong>info@lubumbashiminerals.com</strong>
+                                            <strong>info@lubumbashigold.com</strong>
                                         </a>
                                     </div>
                                 </div>
@@ -618,7 +618,7 @@
                                     <div class="text">Join us in shaping a future rich with possibilities.</div>
                                     <ul class="contact-list-two">
                                         <li><i class="icon fa fa-envelope"></i><a
-                                                href="mailto:info@lubumbashiminerals.com"><span>info@lubumbashiminerals.com</span></a>
+                                                href="mailto:info@lubumbashigold.com"><span>info@lubumbashigold.com</span></a>
                                         </li>
                                         <li><i class="icon fa fa-map-marker-alt"></i>Kampala, Uganda</li>
                                         <li><i class="icon fa fa-phone"></i><a href="tel:+123456789">+(256) 78
