--- a/contact-us.html
+++ b/contact-us.html
@@ -313,8 +313,8 @@
                     </div>
                     <div class="text">
                       <h6>Have any question?</h6>
-                      <a href="mailto:info@lubumbashiminerals.com"
-                        ><span>Free</span> info@lubumbashiminerals.com</a
+                      <a href="mailto:info@lubumbashigold.com"
+                        ><span>Free</span> info@lubumbashigold.com</a
                       >
                     </div>
                   </li>
@@ -324,7 +324,7 @@
                     </div>
                     <div class="text">
                       <h6>Write email</h6>
-                      <a href=""><span>info@lubumbashiminerals.com</span></a>
+                      <a href=""><span>info@lubumbashigold.com</span></a>
                     </div>
                   </li>
                   <li>
@@ -423,8 +423,8 @@
                     <ul class="contact-info-list">
                       <li>
                         <i class="icon fa fa-envelope"></i
-                        ><a href="mailto:info@lubumbashiminerals.com"
-                          ><span>info@lubumbashiminerals.com</span></a
+                        ><a href="mailto:info@lubumbashigold.com"
+                          ><span>info@lubumbashigold.com</span></a
                         >
                       </li>
                       <li>
