--- a/services.html
+++ b/services.html
@@ -473,8 +473,8 @@
                     <ul class="contact-info-list">
                       <li>
                         <i class="icon fa fa-envelope"></i
-                        ><a href="mailto:info@lubumbashiminerals.com"
-                          ><span>info@lubumbashiminerals.com</span></a
+                        ><a href="mailto:info@lubumbashigold.com"
+                          ><span>info@lubumbashigold.com</span></a
                         >
                       </li>
                       <li>
