--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                                 <a href="about-us.html" class="theme-btn btn-style-one bg-dark"><span
                                         class="btn-title">Learn More</span></a>
 
-                                <a href="tel:+92(8800)9806" class="info-btn wow fadeInRight" data-wow-delay="1400ms">
+                                <a href="mailto:info@lubumbashigold.com" class="info-btn wow fadeInRight" data-wow-delay="1400ms">
                                     <i class="icon fa fa-envelope"></i>
                                     <small class="light-text">Contact Us:</small>
                                     <strong class="text-white">info@lubumbashigold.com</strong>
