--- a/about-us.html
+++ b/about-us.html
@@ -139,7 +139,10 @@
               <li>
                 <i class="icon lnr-icon-map-marker"></i>
                 <span class="title">Address</span>
-                <div class="text">Kampala, Uganda</div>
+                <div class="text">
+                  Villa No. 17, Avenue du Golf Quartier Golf, Commune de
+                  Lubumbashi Lubumbashi, Haut-Katanga Province
+                </div>
               </li>
             </ul>
             <ul class="social-links">
@@ -485,7 +488,9 @@
                         >
                       </li>
                       <li>
-                        <i class="icon fa fa-map-marker-alt"></i>Kampala, Uganda
+                        <i class="icon fa fa-map-marker-alt"></i>Villa No. 17,
+                        Avenue du Golf Quartier Golf, Commune de Lubumbashi
+                        Lubumbashi, Haut-Katanga Province
                       </li>
                     </ul>
                   </div>
