--- a/contact-us.html
+++ b/contact-us.html
@@ -141,7 +141,10 @@
               <li>
                 <i class="icon lnr-icon-map-marker"></i>
                 <span class="title">Address</span>
-                <div class="text">Kampala, Uganda</div>
+                <div class="text">
+                  Villa No. 17, Avenue du Golf Quartier Golf, Commune de
+                  Lubumbashi Lubumbashi, Haut-Katanga Province
+                </div>
               </li>
             </ul>
             <ul class="social-links">
@@ -333,7 +336,10 @@
                     </div>
                     <div class="text">
                       <h6>Visit anytime</h6>
-                      <span>Kampala, Uganda</span>
+                      <span
+                        >Villa No. 17, Avenue du Golf Quartier Golf, Commune de
+                        Lubumbashi Lubumbashi, Haut-Katanga Province</span
+                      >
                     </div>
                   </li>
                 </ul>
@@ -428,7 +434,9 @@
                         >
                       </li>
                       <li>
-                        <i class="icon fa fa-map-marker-alt"></i>Kampala, Uganda
+                        <i class="icon fa fa-map-marker-alt"></i>Villa No. 17,
+                        Avenue du Golf Quartier Golf, Commune de Lubumbashi
+                        Lubumbashi, Haut-Katanga Province
                       </li>
                     </ul>
                   </div>
