--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                         <li>
                             <i class="icon lnr-icon-map-marker"></i>
                             <span class="title">Address</span>
-                            <div class="text">Kampala, Uganda</div>
+                            <div class="text">Villa No. 17, Avenue du Golf Quartier Golf, Commune de Lubumbashi Lubumbashi, Haut-Katanga Province</div>
                         </li>
                     </ul>
                     <ul class="social-links">
@@ -616,7 +616,7 @@
                                         <li><i class="icon fa fa-envelope"></i><a
                                                 href="mailto:info@lubumbashigold.com"><span>info@lubumbashigold.com</span></a>
                                         </li>
-                                        <li><i class="icon fa fa-map-marker-alt"></i>Kampala, Uganda</li>
+                                        <li><i class="icon fa fa-map-marker-alt"></i>Villa No. 17, Avenue du Golf Quartier Golf, Commune de Lubumbashi Lubumbashi, Haut-Katanga Province</li>
                                         
                                     </ul>
                                 </div>
