--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 </div>
                 <div class="outer-box">
 
-                    <a href="https://wa.me/+256" class="theme-btn btn-style-one bg-dark"><i
+                    <a href="mailto:info@lubumbashigold.com" class="theme-btn btn-style-one bg-dark"><i
                             class="icon fa-brands fa-whatsapp"></i><span class="btn-title">contact now!</span></a>
 
                     <div class="mobile-nav-toggler"><span class="icon lnr-icon-bars"></span></div>
@@ -82,11 +82,7 @@
 
                     </ul>
                     <ul class="contact-list-one">
-                        <li>
-                            <i class="icon lnr-icon-phone-handset"></i>
-                            <span class="title">Call Now</span>
-                            <div class="text"><a href="tel:+92880098670">+92 (8800) - 98670</a></div>
-                        </li>
+            
                         <li>
                             <i class="icon lnr-icon-envelope1"></i>
                             <span class="title">Send Email</span>
