--- a/services.html
+++ b/services.html
@@ -106,14 +106,6 @@
                 <span class="icon lnr-icon-bars"></span>
               </div>
             </div>
-
-            <div class="btn-box">
-              <a href="tel:+92(8800)9806" class="info-btn">
-                <i class="icon fa fa-phone"></i>
-                <small>Contact Us:</small>
-                <strong>+(256) 78 555-0129</strong>
-              </a>
-            </div>
           </div>
         </div>
 
@@ -130,22 +122,12 @@
             <ul class="navigation clearfix"></ul>
             <ul class="contact-list-one">
               <li>
-                <i class="icon lnr-icon-phone-handset"></i>
-                <span class="title">Call Now</span>
-                <div class="text">
-                  <a href="tel:+92880098670">+92 (8800) - 98670</a>
-                </div>
-              </li>
-              <li>
                 <i class="icon lnr-icon-envelope1"></i>
                 <span class="title">Send Email</span>
                 <div class="text">
-                  <a
-                    href="https://html.kodesolution.com/cdn-cgi/l/email-protection#345c51584474575b5944555a4d1a575b59"
-                    ><span
-                      class="__cf_email__"
-                      data-cfemail="0169646d7141626e6c71606f782f626e6c"
-                      >[email&#160;protected]</span
+                  <a href="mailto:info@lubumbashigold.com"
+                    ><span class="__cf_email__"
+                      >info@lubumbashigold.com</span
                     ></a
                   >
                 </div>
