--- a/contact-us.html
+++ b/contact-us.html
@@ -94,8 +94,6 @@
                 <span class="icon lnr-icon-bars"></span>
               </div>
             </div>
-
-           
           </div>
         </div>
 
@@ -115,12 +113,9 @@
                 <i class="icon lnr-icon-envelope1"></i>
                 <span class="title">Send Email</span>
                 <div class="text">
-                  <a
-                    href="https://html.kodesolution.com/cdn-cgi/l/email-protection#3e565b524e7e5d51534e5f5047105d5153"
-                    ><span
-                      class="__cf_email__"
-                      data-cfemail="670f020b172704080a1706091e4904080a"
-                      >[email&#160;protected]</span
+                  <a href="mailto:info@lubumbashigold.com"
+                    ><span class="__cf_email__"
+                      >info@lubumbashigold.com</span
                     ></a
                   >
                 </div>
